# jarvis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  Makefile  README.md  ROADMAP.md  arms.py  brain.py  cache.py  codecov.yml  context.py  docker-compose.yml  heart.py  intent.py  main.py  memory.py  mouth.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
apis/: calendar.py  todoist.py  weather.py
db/: README.md  init.py
docs/: CONTRIBUTING.md  ROADMAP.md
src/jarvis/: __init__.py  arms.py  brain.py  cache.py  calendar_classifier.py  config.py  context.py  heart.py  intent.py  semantic_transcoder.py  time_stone.py
src/jarvis/apis/: calendar.py  sheets.py  todoist.py  weather.py
tests/: __init__.py  conftest.py  test_arms.py  test_brain.py  test_cache.py  test_calendar.py  test_calendar_classifier.py  test_context.py  test_heart.py  test_intent.py  test_memory.py  test_mouth.py  test_semantic_transcoder.py  test_sheets.py  test_time_stone.py  test_todoist.py  test_weather.py
