[project]
name = "jarvis"
version = "0.1.0"
description = "AI-powered personal assistant"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.3",
    "httpx>=0.27.2",
    "uvicorn>=0.32.0",
    "google-generativeai>=0.8.0",
    "protobuf>=5.28.3",
    "playsound>=1.3.0",
    "gTTS>=2.5.3",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["brain", "arms", "mouth", "apis"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", "__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
