[project]
name = "jarvis"
version = "0.2.0"
description = "AI-powered personal assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.124.0",
    "httpx==0.28.1",
    "uvicorn==0.38.0",
    "google-generativeai==0.8.5",
    "playsound3",
    "gTTS==2.5.4",
    "pydub==0.25.1",
    "audioop-lts",  # Required for pydub on Python 3.13+
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["brain", "arms", "mouth", "apis"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", "__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
